CMAKE_MINIMUM_REQUIRED (VERSION 3.0)

SET ( RBDL_LUAMODEL_TESTS_VERSION_MAJOR 1 )
SET ( RBDL_LUAMODEL_TESTS_VERSION_MINOR 0 )
SET ( RBDL_LUAMODEL_TESTS_VERSION_PATCH 0 )

SET ( RBDL_LUAMODEL_TESTS_VERSION 
	${RBDL_LUAMODEL_TESTS_VERSION_MAJOR}.${RBDL_LUAMODEL_TESTS_VERSION_MINOR}.${RBDL_LUAMODEL_TESTS_VERSION_PATCH}
)


PROJECT (RBDL_LUAMODEL_TESTS VERSION ${RBDL_LUAMODEL_TESTS_VERSION})

# Needed for UnitTest++
LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../CMake )

# Look for unittest++
FIND_PACKAGE (UnitTest++ REQUIRED)
FIND_PACKAGE (Lua51 REQUIRED)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_BINARY_DIR}/include
                     ${UNITTEST++_INCLUDE_DIR}
                     ${LUA_INCLUDE_DIR}
                     ../)

SET ( LUAMODEL_TESTS_SRCS
	testLuaModel.cc
	 ../luamodel.h
	 ../luatables.h	
	../luamodel.cc
	../luatables.cc
	)



SET_TARGET_PROPERTIES ( ${PROJECT_EXECUTABLES} PROPERTIES
  LINKER_LANGUAGE CXX
)

ADD_EXECUTABLE ( rbdl_luamodel_tests ${LUAMODEL_TESTS_SRCS} )

SET_TARGET_PROPERTIES ( rbdl_luamodel_tests PROPERTIES
	LINKER_LANGUAGE CXX
	OUTPUT_NAME runLuaModelTests
	)

SET (RBDL_LIBRARY rbdl)
IF (RBDL_BUILD_STATIC)
	SET (RBDL_LIBRARY rbdl-static)
ENDIF (RBDL_BUILD_STATIC)

SET (MUSCLE_ADDON_LIBRARY rbdl_muscle)
IF (RBDL_BUILD_STATIC)
	SET (MUSCLE_ADDON_LIBRARY rbdl_muscle-static)
ENDIF (RBDL_BUILD_STATIC)


IF(RBDL_BUILD_ADDON_MUSCLE)
	TARGET_LINK_LIBRARIES ( rbdl_luamodel_tests
			${UNITTEST++_LIBRARY}
			${MUSCLE_ADDON_LIBRARY}
			${RBDL_LIBRARY}
			${LUA_LIBRARIES}
		)
ELSE(RBDL_BUILD_ADDON_MUSCLE)
	TARGET_LINK_LIBRARIES ( rbdl_luamodel_tests
			${UNITTEST++_LIBRARY}
			${RBDL_LIBRARY}
			${LUA_LIBRARIES}
		)
ENDIF(RBDL_BUILD_ADDON_MUSCLE)
	
OPTION (RUN_AUTOMATIC_TESTS "Perform automatic tests after compilation?" OFF)



IF (RUN_AUTOMATIC_TESTS)

GET_FILENAME_COMPONENT(MODEL_DIR "${PROJECT_SOURCE_DIR}/.." ABSOLUTE)

ADD_CUSTOM_COMMAND (TARGET rbdl_luamodel_tests
	POST_BUILD
	COMMAND ./runLuaModelTests ARGS ${MODEL_DIR}
	COMMENT "Running automated addon luamodel tests..."
	)
ENDIF (RUN_AUTOMATIC_TESTS)
